# Trigonometric-Missing-Side-Calculator

./: pyproject.toml
trigonometric_missing_side_calculator_app/: app.py  controller.py
