[tool.poetry]
name = "trigonometric-missing-side-calculator-app"
version = "0.1.0"
description = ""
authors = ["AdamAinsworthCHS <ainsa128@hsd.k12.or.us>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyqt6 = "^6.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
